--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "core-js": "^3.38.1",
     "fractional": "^1.0.0",
     "img": "^3.0.3",
+    "parcel": "^2.12.0",
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.78.0"
+  },
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.12.0"
   }
 }
